--- a/static/css/utility.css
+++ b/static/css/utility.css
@@ -1,5 +1,5 @@
 :root {
-    --off-white: #FAF9F6;
+    --off-white: #f2eee6;
     --color-secondary: #00ff00;
     --color-tertiary: #0000ff;
     --black: #000000;
