--- a/static/views/about.html
+++ b/static/views/about.html
@@ -18,15 +18,15 @@
       <div class="skills-section">
         <div class="skills-title">Skills & Technologies:</div>
         <div class="skill-item">
-          <img src="/icons/win_controls/computer.png" alt="Computer icon" />
-          Python & Flask
+          <img src="/icons/computer.png" alt="Computer icon" />
+          Python
         </div>
         <div class="skill-item">
-          <img src="/icons/win_controls/internet.png" alt="Web icon" />
-          JavaScript & Web Development
+          <img src="/icons/Safari.png" alt="Web icon" />
+          JavaScript
         </div>
         <div class="skill-item">
-          <img src="/icons/win_controls/database.png" alt="Database icon" />
+          <img src="/icons/Trust.png" alt="Database icon" />
           Database Design
         </div>
       </div>
