replacing PyGithub dependency with my own async implementation

--- a/static/views/project_card.jinja
+++ b/static/views/project_card.jinja
@@ -14,7 +14,7 @@
       <p class="project-description">{{ project.description }}</p>
       
       <div class="project-tags">
-        {% for tag in project.tags %}
+        {% for tag in project.topics %}
           <span class="project-tag">{{ tag }}</span>
         {% endfor %}
       </div>
