--- a/static/views/project_card.jinja
+++ b/static/views/project_card.jinja
@@ -9,6 +9,11 @@
     <div class="project-thumbnail">
       <img src="{{ project.thumbnail }}" alt="{{ project.name }}" />
     </div>
+
+    <div class="project-stars">
+      <span class="project-star">{{project.stars}}</span>
+      <img src="/icons/star.png">
+    </div>
     
     <div class="project-content">
       <p class="project-description">{{ project.description }}</p>
