--- a/static/views/welcome.html
+++ b/static/views/welcome.html
@@ -5,26 +5,22 @@
     <div class="welcome-text">
       <h1 class="welcome-header">Welcome Visitor!</h1>
       <p class="welcome-message">
-        Welcome to my personal site! This is a Windows 98-inspired web
-        experience that I built using HTML, CSS, and JavaScript.
+        Welcome to my personal site! This is a Windows 98-inspired
+        experience that I built using Vanilla JS and Python with Vite and Flask.
         Here you'll find my collection of projects, blog posts, and more.
       </p>
       <p class="welcome-message">
-        Feel free to drag windows around, minimize them, or close them just like 
-        you would in Windows. Each window contains unique content that 
-        you can interact with.
+        You can drag windows around, minimize, or close them just like 
+        you would in Windows.
       </p>
-      <p class="welcome-message">
-        If you have any questions or need help, feel free to ask Clippy, 
-        your helpful assistant. Clippy is here to help you navigate the site 
-        and find what you're looking for.
+
       <div class="quick-links">
         <div class="quick-links-title">Quick Links:</div>
         <button href="#" class="link-button" onclick="window.environment.newWindow(window.musicPlayerType, window.musicWindowConfig)">
           <img src="/icons/music.png" alt="Internet Explorer icon" />
           Music
         </button>
-        <button href="#" class="link-button" onclick="window.environment.newWindow(window.windowType, window.welcomeWindowConfig)">
+        <button href="#" class="link-button" onclick="window.environment.newWindow(window.windowType, window.projectsWindowConfig)">
           <img src="/icons/console.png" alt="Internet Explorer icon" />
           Projects
         </button>
@@ -34,7 +30,7 @@
         </button>
       </div>
     </div>
-    
+
     <div class="clippy-container">
       <img src="/images/clippy.gif" alt="Clippy animation" />
       <p><small>Your helpful assistant, Clippy!</small></p>
