--- a/static/views/about.html
+++ b/static/views/about.html
@@ -4,19 +4,25 @@
 <body class="content-body">
   <div class="about-container">
     <div class="about-text">
-      <h1 class="about-header">About Me</h1>
+      <h1 class="about-header">I'm Tadj.</h1>
       <p class="about-message">
-        Hi there! I'm a software developer passionate about creating 
-        retro-inspired web experiences and modern applications.
+        I like electronics, programming and building things. I love plants and meterology
       </p>
       <p class="about-message">
-        I enjoy working with various technologies including Python, JavaScript, 
-        Flask, and modern web frameworks. This site showcases my love for 
-        nostalgic interfaces while demonstrating contemporary development skills.
+        I mostly do embedded and network programming, but nowadays I do more and more
+        web development. I love automation and primarily image/audio processing.
+        TLDR; If I think it's useful, I will try to build it.
+
+        If you want to see my <span class="latest">Latest</span> project (me fumbling through learning LLM automation),
+        check out my <a href="https://github.com/sudoDeVinci/LocalCoCaptain" target="_blank">LocalCoCaptain</a> repo. 
       </p>
-      
+      <p class="about-message">
+        I've just finished a BSc in Network Security from Linnaeus University in Sweden.
+        I'm freelancing as a web developer, which means I get to work on a variety of projects.
+      </p>
+
       <div class="skills-section">
-        <div class="skills-title">Skills & Technologies:</div>
+        <div class="skills-title">Good at</div>
         <div class="skill-item">
           <img src="/icons/computer.png" alt="Computer icon" />
           Python
