--- a/static/css/about.css
+++ b/static/css/about.css
@@ -15,10 +15,6 @@
   gap: 20px;
 }
 
-.about-container p {
-  font-size: 1.25rem;
-}
-
 .about-text {
   flex: 1;
 }
@@ -38,7 +34,7 @@
 .about-message {
   line-height: 1.6;
   margin-bottom: 20px;
-  font-size: 1rem;
+  font-size: 1rem !important;
 }
 
 .skills-section {
