doom renders as fast as it should now - using canvas properly as 2D graphics rather than css bs workaround

--- a/static/views/about.html
+++ b/static/views/about.html
@@ -1,46 +1,40 @@
 <link rel="stylesheet" href="/css/about.css" />
-<link rel="stylesheet" href="https://unpkg.com/98.css@0.1.4/build/98.css" />
+
 <title>About Me</title>
 <body class="content-body">
   <div class="about-container">
     <div class="about-text">
       <h1 class="about-header">I'm Tadj.</h1>
+      
       <p class="about-message">
         I like electronics, programming and building things. I love plants and meterology
       </p>
+
       <p class="about-message">
         I mostly do embedded and network programming, but nowadays I do more and more
         web development. I love automation and primarily image/audio processing.
         TLDR; If I think it's useful, I will try to build it.
 
-        If you want to see my <span class="latest">Latest</span> project (me fumbling through learning LLM automation),
-        check out my <a href="https://github.com/sudoDeVinci/LocalCoCaptain" target="_blank">LocalCoCaptain</a> repo. 
+        If you want to see my <a href="https://github.com/sudoDeVinci/LocalCoCaptain" class="latest">Latest</a> project, check out my
+        <a href="https://github.com/sudoDeVinci/LocalCoCaptain" target="_blank">LocalCoCaptain</a> repo. 
       </p>
+      
       <p class="about-message">
         I've just finished a BSc in Network Security from Linnaeus University in Sweden.
         I'm freelancing as a web developer, which means I get to work on a variety of projects.
       </p>
-
-      <div class="skills-section">
-        <div class="skills-title">Good at</div>
-        <div class="skill-item">
-          <img src="/icons/computer.png" alt="Computer icon" />
-          Python
-        </div>
-        <div class="skill-item">
-          <img src="/icons/Safari.png" alt="Web icon" />
-          JavaScript
-        </div>
-        <div class="skill-item">
-          <img src="/icons/Trust.png" alt="Database icon" />
-          Database Design
+    
+    </div>
+    <div class="window profile-container">
+      <div class="title-bar">
+        <div class="title-bar-text">Hey that's me!</div>
+        <div class="title-bar-controls">
+          <button aria-label="Close"></button>
         </div>
       </div>
-    </div>
-    
-    <div class="profile-container">
-      <img src="/images/profile.png" alt="Profile picture" />
-      <p><small>That's me!</small></p>
+      <div class="window-body">
+        <img src="/images/headshot.jpeg", alt="Headshot of Tadj">
+      </div>
     </div>
   </div>
 </body>
