--- a/static/css/about.css
+++ b/static/css/about.css
@@ -22,6 +22,18 @@
 .profile-container {
   flex-shrink: 0;
   text-align: center;
+  max-width: 150px;
+  width: fit-content;
+}
+
+.profile-container .window-body {
+  margin: 0;
+}
+
+.profile-container img {
+  width: 100%;
+  height: auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .about-header {
@@ -37,30 +49,26 @@
   font-size: 1rem !important;
 }
 
-.skills-section {
-  background-color: white;
-  border: 2px solid #808080;
-  margin-top: 20px;
-  padding: 10px;
+
+@keyframes rotateScale {
+  0% {
+    transform: rotate(-30deg) scale(1);
+  }
+  50% {
+    transform: rotate(-30deg) scale(1.25);
+  }
+  100% {
+    transform: rotate(-30deg) scale(1);
+  }
 }
 
-.skills-title {
-  color: #000080;
-  margin-bottom: 10px;
-  font-size: 1.15rem;
+
+.latest {
+  display: inline-block;
   font-weight: bold;
+  animation-name: rotateScale;
+  animation-duration: 2000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
 }
 
-.skill-item {
-  display: flex;
-  align-items: center;
-  margin: 0.5rem 0;
-  font-size: 1.1rem;
-  padding: 5px;
-}
-
-.skill-item img {
-  max-width: 1.5rem;
-  height: 1.3rem;
-  margin-right: 0.5rem;
-}
