--- a/static/css/doom.css
+++ b/static/css/doom.css
@@ -18,16 +18,12 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    opacity: 0.01; /* Hide the canvas */
+    opacity: 1; /* Make the canvas visible */
+    image-rendering: pixelated; /* Keep pixels sharp when scaled */
 }
 
 #gradientScreen {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    image-rendering: pixelated;
-    pointer-events: none; /* Allow clicks to pass through */
-    background-size: 200% 200%; /* Scale the gradient to 640x400 */
+    display: none; /* This is no longer used for rendering */
 }
 
 /* Media query for screen width less than 700px */
