--- a/static/views/about.html
+++ b/static/views/about.html
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="window-body">
-        <img src="/images/headshot.jpeg", alt="Headshot of Tadj">
+        <img src="/images/headshot.jpg", alt="Headshot of Tadj">
       </div>
     </div>
   </div>
