new juicy audios

--- a/static/views/welcome.html
+++ b/static/views/welcome.html
@@ -6,12 +6,16 @@
       <h1 class="welcome-header">Welcome Visitor!</h1>
       <p class="welcome-message">
         Welcome to my personal site! This is a Windows 98-inspired
-        experience that I built using Vanilla JS and Python with Vite and Flask.
-        Here you'll find my collection of projects, blog posts, and more.
+        experience that I built with Vanilla JS and Python using Vite and Flask.
+        Here you'll find my collection of projects, and more.
       </p>
       <p class="welcome-message">
         You can drag windows around, minimize, or close them just like 
-        you would in Windows.
+        you would on a desktop.
+      </p>
+      <p class="welcome-message">
+        Take a look around! Maybe you'd like to check out music from my friends and I,
+        see my project portfolio, or even play a game of Doom!
       </p>
 
       <div class="quick-links">
