--- a/static/views/welcome.html
+++ b/static/views/welcome.html
@@ -5,8 +5,7 @@
     <div class="welcome-text">
       <h1 class="welcome-header">Welcome Visitor!</h1>
       <p class="welcome-message">
-        Welcome to my personal site! This is a Windows 98-inspired
-        experience that I built with Vanilla JS and Python using Vite and Flask.
+        Welcome to my personal site!
         Here you'll find my collection of projects, and more.
       </p>
       <p class="welcome-message">
@@ -15,7 +14,7 @@
       </p>
       <p class="welcome-message">
         Take a look around! Maybe you'd like to check out music from my friends and I,
-        see my project portfolio, or even play a game of Doom!
+        see my project portfolio, or even play a game.
       </p>
 
       <div class="quick-links">
